<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradients"
    tools:context="ch.epfl.sweng.qeeqbii.chat.AgeActivity">

    <include
        android:id="@+id/age_appBar"
        layout="@layout/app_bar_layout_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YourAge" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/age_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/savechanges"
        android:textColor="@android:color/white"
        android:layout_below="@+id/age_input"
        android:layout_alignEnd="@+id/age_input" />

</RelativeLayout>
